fix(theme): OO height on mobile devices

--- a/themes/esco/scss/reciaStyle.scss
+++ b/themes/esco/scss/reciaStyle.scss
@@ -191,11 +191,18 @@ body {
 		}
 	}
 
-	// Partages par lien public
-	&#body-public main#content {
-		iframe.onlyoffice-inline,
-		> #app-content > iframe#onlyofficeFrame {
-			height: calc(100vh + 8px);
+	&#body-public {
+		// Partages par lien public
+		main#content {
+			iframe.onlyoffice-inline,
+			> #app-content > iframe#onlyofficeFrame {
+				height: calc(100vh + 8px);
+			}
+		}
+
+		// Force la hauteur pour l'affichage mobile de OO
+		#content > #app > iframe {
+			height: calc(100dvh - 58px) !important;
 		}
 	}
 
